--- a/index.html
+++ b/index.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
 <html ng-app='ShoppingStore1'>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Custom Service</title>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <title>Shopping List Check Off</title>
+    <style>
+      .emptyMessage {
+        font-weight: bold;
+        color: red;
+        font-size: 1.2em;
+      }
+      li {
+        margin-bottom: 7px;
+        font-size: 1.2em;
+      }
+      li > button {
+        margin-left: 6px;
+      }
+      button > span {
+        color: green;
+      }
+    </style>
   </head>
   <body>
-    <h1>Store</h1>
 
-    <div ng-controller ='ToBuyController as products1'>
-      <h3> To Buy</h3>
-      <ul ng-repeat= 'item in products1.getToBuyList()'>
-        <li> Buy {{item.quantity}} of {{item.name}}
-         <button ng-click='products1.buyItem($index)'>buy</button>
+    <h1>Shopping List Check Off</h1>
+    <div class="container">
+    <div class="row">
+    <div class="col-md-6">
+      <h2>To Buy:</h2>
+      <div ng-controller ='ToBuyController as buyItems'>
+      <ul ng-repeat= 'item in buyItems.getToBuyList()'>
+        <li> Buy {{item.quantity}} {{item.name}}
+         <button class="btn btn-default" ng-click='buyItems.buyItem($index)'>
+           <span class="glyphicon glyphicon-ok"></span>Bought</button>
         </li>
       </ul>
-      <div ng-if="!products1.getToBuyList().length">Everything is bought!"</div>
-    </div>
-
-      <div  ng-controller ='AlreadyBoughtController as products'>
-      <h3>Bought</h3>
-      <ul ng-repeat= 'item in products.getAlreadyBoughtList()'>
-        <li>{{item.quantity}} of {{item.name}} is bought
-        <button ng-click='products.checkOff($index)'>checkOff</button></li>
-      </ul>
-      <div ng-if="!products.getAlreadyBoughtList().length">Nothing is bought!</div>
+      <div class="emptyMessage" ng-if="!buyItems.getToBuyList().length">Everything is bought!</div>
     </div>
 
 
-    <!-- LIST #1 - unlimited items -->
-    <!-- <div id="list1" ng-controller='ShoppingListController1 as list1'>
-      <h3>Shopping List #1</h3>
-      <input type="text" ng-model="list1.itemName" placeholder="item name">
-      <input type="text" ng-model="list1.itemQuantity" placeholder="quantity">
-      <button ng-click="list1.addItem();">Add Item</button>
-      <ol>
-        <li ng-repeat="item in list1.items">
-          {{ item.quantity }} of {{ item.name }}
-          <button ng-click="list1.removeItem($index);">Remove Item</button>
-        </li>
-      </ol>
-      <div class="error">Error: {{list1.errorMessage}}</div>
-    </div> -->
-
-    <!-- LIST #2 (limited to 3 items) -->
-    <!-- <div id="list2" ng-controller='ShoppingListController2 as list2'>
-      <h3>Shopping List #2 (limited to 3 items)</h3>
-      <input type="text" ng-model="list2.itemName" placeholder="item name">
-      <input type="text" ng-model="list2.itemQuantity" placeholder="quantity">
-      <button ng-click="list2.addItem();">Add Item</button>
-      <ol>
-        <li ng-repeat="item in list2.items">
-          {{ item.quantity }} of {{ item.name }}
-          <button ng-click="list2.removeItem($index);">Remove Item</button>
-        </li>
-      </ol>
-      <div class="error">Error: {{list2.errorMessage}}</div>
-    </div> -->
+    <div class="col-md-6">
+      <h2>Already Bought:</h2>
+      <div  ng-controller ='AlreadyBoughtController as boughtItems'>
+      <ul ng-repeat= 'item in boughtItems.getAlreadyBoughtList()'>
+        <li> Bought {{item.quantity}} of {{item.name}}
+        <button class="btn btn-default" ng-click='boughtItems.checkOff($index)'>
+          <span class="glyphicon "></span> checkOff</button></li>
+      </ul>
+      <div  class="emptyMessage" ng-if="!boughtItems.getAlreadyBoughtList().length">Nothing bought yet.</div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
   </body>
 </html>
