--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       </ul>
       <div class="emptyMessage" ng-if="!buyItems.getToBuyList().length">Everything is bought!</div>
     </div>
+  </div>
 
 
     <div class="col-md-6">
@@ -51,6 +52,7 @@
           <span class="glyphicon "></span> checkOff</button></li>
       </ul>
       <div  class="emptyMessage" ng-if="!boughtItems.getAlreadyBoughtList().length">Nothing bought yet.</div>
+    </div>
     </div>
   </div>
   </div>
